<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.ipn.cecyt9.practica04_reservas.MainActivity">

    <TextView
        android:id="@+id/text_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nombre" />

    <EditText
        android:id="@+id/input_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/text_personas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_personas" />

    <SeekBar
        android:id="@+id/seekbar_personas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="1" />

    <TextView
        android:id="@+id/text_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_fecha" />

    <Button
        android:id="@+id/btn_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBotones"
        android:text="@string/btn_fecha" />

    <TextView
        android:id="@+id/text_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_hora" />

    <Button
        android:id="@+id/btn_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBotones"
        android:text="@string/btn_hora" />

    <Button
        android:id="@+id/btn_reserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:onClick="onClickReserva"
        android:text="@string/btn_reserva" />

</LinearLayout>
