<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_titulo"
        android:id="@+id/textTitulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/input_email"
        android:layout_below="@+id/textTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_correo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/input_contra"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_password"
        android:layout_below="@+id/input_email" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_entrar"
        android:id="@+id/btn_entrar"
        android:layout_below="@+id/input_contra"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onClickEntrar"/>


</RelativeLayout>
